style.css
html {
    background-color: rgb(0, 0, 0);
}

h1 {
    color:rgb(10, 10, 255);
    text-align: center;
}

#main-bio {
    text-align: center;
    color: blue;
}

#lists {
    color: blue;
    text-align: center;
    padding-left: 500px;
    padding-right: 500px;
}

#bio-image {
    /* Block display (more on this later) */
    display: block;
    width: 200px;
    height: 200px;
    margin-left: auto;
    margin-right: auto;
}

